# fastVTX_fork

./: .gitignore  BDT.py  BDT2.py  BDT3.py  BDT_testing.py  GAN_distances.py  GAN_hierarchy.py  README.md  extract_branches.py  gantests.ipynb  inference.py  main.py  mainConfig.txt  main_GAN.py  main_GAN_test.py  main_root.py  mapping_file.py  play.py  save_network_onnx.py  save_networks.py  save_smearing_network_onnx.py  separate_trackchi2.py  systematics.py  test.py  test_GAN_distances.py  test_GAN_hierarchy.py  train.py  train_edit.py  train_trackchi2.py  tune.py
datasets/: Motherhist  split_up_tuple.py
datasets_mixed/: kee_tree.root  kee_tree_reco.root  mixed_Kee_2.root  mixed_Kee_reco.root
davinci/: bookkeeping_lib.py  collapse_individual_tuples.py  collapse_individual_tuples_GANGA.py  cut.py  cut_hierarchy.py  cut_uproot.py  davinci.py  davinci_Kee_mcmatch_intermediates.py  davinci_general.py  davinci_general_mcmatch.py  davinci_general_mcmatch_intermediates.py  davinci_general_mcmatch_intermediates_withChargeCounters.py  download.py  (+16 more)
src/: build_env.sh  setup.cfg
src/fast_vertex_quality/: __init__.py
src/fast_vertex_quality.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fast_vertex_quality/models/: conditional_GAN.py  conditional_VAE.py  conditional_WGAN.py
src/fast_vertex_quality/testing_schemes/: BDT.py
src/fast_vertex_quality/tools/: config.py  data_loader.py  new_data_loader.py  plotting.py  training.py  transformers.py  variables_tools.py
src/fast_vertex_quality/training_schemes/: primary_vertex.py  track_chi2.py  vertex_quality.py
(+69 files in other folders)
