[metadata]
name = fast_vertex_quality
version = 1.0.0
author = Alex Marshall
author_email = alex.marshall@bristol.ac.uk
description = Code for fast generation of vertex quality variables
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.cern.ch/amarshal/fast_vertex_quality
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data=True

[options.package_data]
alexPlot = number_storage/*, params/*, background/upper_mass_samples/*
